--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "shubhamv company",
+  "orgName": "adyen",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi","Communities","B2BCommerce"],
   "settings": {
